<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="40dp">

    <TextView
        android:id="@+id/appName"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/titleName"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.371">

        <TextView
            android:id="@+id/nameHint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:text="@string/nameTextView"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="319dp" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:gravity="center_vertical"
            android:hint="@string/editTextName"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="215dp"
            tools:layout_editor_absoluteY="354dp" />

    </LinearLayout>


    <Button
        android:id="@+id/startButton"
        android:layout_width="131dp"
        android:layout_height="58dp"
        android:text="@string/startButtonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

</androidx.constraintlayout.widget.ConstraintLayout>