<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity">

    <TextView
        android:id="@+id/myQuestionTextView"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myQuestionTextView"
        app:layout_constraintVertical_bias="0.196">

        <Button
            android:id="@+id/optionButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#5194B3"
            android:padding="15dp"
            android:text="@string/option1ButtonText"
            android:textAllCaps="false"
            android:textColor="#212121" />

        <Button
            android:id="@+id/optionButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#5194B3"
            android:padding="15dp"
            android:text="@string/option2ButtonText"
            android:textAllCaps="false"
            android:textColor="#212121" />

        <Button
            android:id="@+id/optionButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#5194B3"
            android:padding="15dp"
            android:text="@string/option3ButtonText"
            android:textAllCaps="false"
            android:textColor="#212121" />

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="216dp"
        android:layout_height="72dp"
        android:text="@string/nextButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.38" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/myQuestionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_height="45dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>